--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -37,7 +37,7 @@ monitor=eDP-1,2560x1600@90,0x0,1.6
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = fuzzel
+$menu = wofi
 
 
 #################
@@ -272,7 +272,7 @@ bind = $mainMod, C, exec, missioncenter
 bind = $mainMod, M, exit,
 
 bind = $mainMod, N, exec, clash-verge
-bind = $mainMod SHIFT, X, exec, grim -g "$(slurp)" ~/Pictures/screenshot_$(date +'%Y%m%d_%H%M%S').png
+bind = $mainMod SHIFT, X, exec, gradia --screenshot               
 bind = $mainMod SHIFT, C, exec, grim -g "$(slurp)" - | wl-copy
 
 bind = $mainMod SHIFT, W, exec, waypaper
@@ -344,27 +344,134 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+#windowrule = suppressevent maximize, class:.*
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+#windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+
 #Some windows floating
-windowrule = size 60%, float,class:waypaper
-windowrule = size 45%, float,class:spotify
-windowrule = size 45%, float,class:clash-verge
-windowrule = size 75%, float,class:bilibili
-windowrule = size 45%, float,class:fdm
-windowrule = size 75%, float,class:net.lutris.Lutris
-windowrule = size 45%, float,class:com.github.hluk.copyq
-windowrule = size 45%, float,class:wechat, title:图片和视频
-windowrule = size 30%, float, class:QQ, title:图片查看器
-windowrule = size 75%, float, class:Waydroid
+#windowrulev2 = size 60%, float,class:waypaper
+#windowrulev2 = size 45%, float,class:spotify
+#windowrulev2 = size 45%, float,class:clash-verge
+#windowrulev2 = size 75%, float,class:bilibili
+#windowrulev2 = size 45%, float,class:fdm
+#windowrulev2 = size 75%, float,class:net.lutris.Lutris
+#windowrulev2 = size 45%, float,class:com.github.hluk.copyq
+#windowrulev2 = size 45%, float,class:wechat, title:图片和视频
+#windowrulev2 = size 30%, float, class:QQ, title:图片查看器
+#windowrulev2 = size 75%, float, class:Waydroid
+
+#windowrulev2 = opacity 1.0 override 1.0 override, class:^(mpv)$
+#windowrulev2 = opacity 1.0 override 1.0 override, class:^(bilibili)$
 #Fix xwyland blur
 #windowrule = noblur, class:(wechat), title:negative:^(朋友圈|微信|设置|聊天文件|预览|图片和视频)\W*
 #windowrule = noborder, class:(wechat), title:negative:^(朋友圈|微信|设置|聊天文件|预览|图片和视频)\W*
 #windowrule = noshadow, class:(wechat), title:negative:^(朋友圈|微信|设置|聊天文件|预览|图片和视频)\W*
-windowrule = noinitialfocus, xwayland:1
-windowrule = noblur, xwayland:1
-windowrule = noborder, xwayland:1
-windowrule = noshadow, xwayland:1
+#windowrulev2 = noinitialfocus, xwayland:1
+#windowrulev2 = noblur, xwayland:1
+#windowrulev2 = noborder, xwayland:1
+#windowrulev2 = noshadow, xwayland:1
+
+windowrule {
+  name = waypaper-float
+  match:class = waypaper
+  size = 45% 45%
+  float = true
+}
+windowrule {
+  name = spotify-float
+  match:class = spotify
+  size = 45% 45%
+  float = true
+}
+
+windowrule {
+  name = clash-float
+  match:class = clash-verge
+  size = 800 500
+  float = true
+}
+
+windowrule {
+  name = bilibili-float
+  match:class = bilibili
+  size = 1200 800
+  float = true
+}
+
+windowrule {
+  name = fdm-float
+  match:class = fdm
+  size = 800 500
+  float = true
+}
+
+windowrule {
+  name = lutris-float
+  match:class = net.lutris.Lutris
+  size = 1200 800
+  float = true
+}
+
+windowrule {
+  name = copyq-float
+  match:class = com.github.hluk.copyq
+  size = 800 500
+  float = true
+}
+
+windowrule {
+  name = wechat-media
+  match:class = wechat
+  match:title = 图片和视频
+  size = 800 500
+  float = true
+}
+
+windowrule {
+  name = qq-viewer
+  match:class = QQ
+  match:title = 图片查看器
+  size = 600 450
+  float = true
+}
+
+windowrule {
+  name = waydroid-float
+  match:class = Waydroid
+  size = 1200 750
+  float = true
+}
+
+windowrule {
+  name = mpv-opacity
+  match:class = ^(mpv)$
+  opacity = 1.0 override 1.0 override
+}
+
+windowrule {
+  name = bilibili-opacity
+  match:class = ^(bilibili)$
+  opacity = 1.0 override 1.0 override
+}
 
