--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -261,6 +261,7 @@ bind = $mainMod, A, exec, gnome-software
 
 bind = $mainMod, D, exec, thunderbird
 bind = $mainMod, F, fullscreen, 1
+
 bind = $mainMod, G, exec, libreoffice
 bind = $mainMod, H, exec, spotify
 bind = $mainMod, J, togglesplit, # dwindle
@@ -274,7 +275,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, N, exec, clash-verge
 bind = $mainMod SHIFT, X, exec, gradia --screenshot               
 bind = $mainMod SHIFT, C, exec, grim -g "$(slurp)" - | wl-copy
-
+bind = $mainModi SHIFT, F, fullscreen, 2
 bind = $mainMod SHIFT, W, exec, waypaper
 
 # Move focus with mainMod + arrow keys
@@ -395,14 +396,16 @@ windowrule {
 windowrule {
   name = waypaper-float
   match:class = waypaper
-  size = 45% 45%
+  size = 800 500
   float = true
+  center = on
 }
 windowrule {
   name = spotify-float
   match:class = spotify
-  size = 45% 45%
+  size = 800 500
   float = true
+  center = on
 }
 
 windowrule {
@@ -410,6 +413,7 @@ windowrule {
   match:class = clash-verge
   size = 800 500
   float = true
+  center = on
 }
 
 windowrule {
@@ -417,6 +421,7 @@ windowrule {
   match:class = bilibili
   size = 1200 800
   float = true
+  center = on
 }
 
 windowrule {
@@ -424,6 +429,7 @@ windowrule {
   match:class = fdm
   size = 800 500
   float = true
+  center = on
 }
 
 windowrule {
@@ -431,6 +437,7 @@ windowrule {
   match:class = net.lutris.Lutris
   size = 1200 800
   float = true
+  center = on
 }
 
 windowrule {
@@ -438,6 +445,7 @@ windowrule {
   match:class = com.github.hluk.copyq
   size = 800 500
   float = true
+  center = on
 }
 
 windowrule {
@@ -446,6 +454,7 @@ windowrule {
   match:title = 图片和视频
   size = 800 500
   float = true
+  center = on
 }
 
 windowrule {
@@ -454,6 +463,7 @@ windowrule {
   match:title = 图片查看器
   size = 600 450
   float = true
+  center = on
 }
 
 windowrule {
@@ -461,6 +471,7 @@ windowrule {
   match:class = Waydroid
   size = 1200 750
   float = true
+  center = on
 }
 
 windowrule {
@@ -473,5 +484,13 @@ windowrule {
   name = bilibili-opacity
   match:class = ^(bilibili)$
   opacity = 1.0 override 1.0 override
+}
+
+windowrule {
+  name = fix-xwayland
+  match:xwayland = 1
+  border_size = 0
+  no_blur = on
+  no_shadow = on
 }
 
