--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -126,7 +126,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.9
-    inactive_opacity = 0.5
+    inactive_opacity = 0.75
 
     shadow {
         enabled = true
@@ -138,46 +138,55 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
+        size = 5
+        passes = 2
+        brightness = 0.95
         vibrancy = 0.1696
-    }
+        new_optimizations = true
+        noise = 0.02
+  }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
+
+# name "End-4"
+# credit https://github.com/end-4/dots-hyprland
+
 animations {
-    enabled = yes, please :)
-
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = easeOutQuint,   0.23, 1,    0.32, 1
-    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear,         0,    0,    1,    1
-    bezier = almostLinear,   0.5,  0.5,  0.75, 1
-    bezier = quick,          0.15, 0,    0.1,  1
-
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    enabled = true
+    # Animation curves
+    
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.38, 0.04, 1, 0.07
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+    # Animation configs
+    animation = windows, 1, 2, md3_standard, slide
+    animation = windowsIn, 1, 2, md3_decel, popin 60%
+    animation = windowsOut, 1, 2, md3_accel
+    animation = border, 1, 4, default
+    animation = fade, 1, 2, md3_decel
+    # animation = layers, 1, 2, md3_decel, slide
+    animation = layersIn, 1, 2, menu_decel, slide
+    animation = layersOut, 1, 1, menu_accel, slide
+    animation = fadeLayersIn, 1, 1, menu_decel
+    animation = fadeLayersOut, 1, 2, menu_accel
+    animation = workspaces, 1, 4, menu_decel, slide
+    # animation = workspaces, 1, 2.5, softAcDecel, slide
+    # animation = workspaces, 1, 7, menu_decel, slidefade 15%
+    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+    animation = specialWorkspace, 1, 2, md3_decel, slidevert
 }
-
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
@@ -268,14 +277,15 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, exec, goldendict
 bind = $mainMod, L, exec, pycharm
 bind = $mainMod, Z, exec, wechat
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, C, exec, missioncenter
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, exit,
+bind = $mainMod, B, exec, firefox
 
 bind = $mainMod, N, exec, clash-verge
 bind = $mainMod SHIFT, X, exec, gradia --screenshot               
 bind = $mainMod SHIFT, C, exec, grim -g "$(slurp)" - | wl-copy
-bind = $mainModi SHIFT, F, fullscreen, 2
+bind = $mainMod SHIFT, F, fullscreen, 2
 bind = $mainMod SHIFT, W, exec, waypaper
 
 # Move focus with mainMod + arrow keys
