--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -173,7 +173,7 @@ animations {
     # Animation configs
     animation = windows, 1, 2, md3_standard, slide
     animation = windowsIn, 1, 2, md3_decel, popin 60%
-    animation = windowsOut, 1, 2, md3_accel
+    animation = windowsOut, 1, 2, md3_accel, popin 90%
     animation = border, 1, 4, default
     animation = fade, 1, 2, md3_decel
     # animation = layers, 1, 2, md3_decel, slide
@@ -283,8 +283,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, B, exec, firefox
 
 bind = $mainMod, N, exec, clash-verge
-bind = $mainMod SHIFT, X, exec, gradia --screenshot               
-bind = $mainMod SHIFT, C, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, X, exec, screen-shot-menu        
 bind = $mainMod SHIFT, F, fullscreen, 2
 bind = $mainMod SHIFT, W, exec, waypaper
 
