--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -44,12 +44,10 @@ $menu = wofi
 ### AUTOSTART ###
 #################
 
+
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = mako & waybar & blueman-applet & fcitx5 --replace -d & nm-applet --indicator & hypridle & copyq & udiskie & 
 
 exec-once = swww-daemon
@@ -75,6 +73,10 @@ env = LC_CTYPE,zh_CN.UTF-8
 env = XDG_CURRENT_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
+
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1   # 可选，统一窗口装饰
 
 ###################
 ### PERMISSIONS ###
@@ -172,7 +174,7 @@ animations {
     bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
     # Animation configs
     animation = windows, 1, 2, md3_standard, slide
-    animation = windowsIn, 1, 2, md3_decel, popin 60%
+    animation = windowsIn, 1, 2, md3_decel, popin 80%
     animation = windowsOut, 1, 2, md3_accel, popin 90%
     animation = border, 1, 4, default
     animation = fade, 1, 2, md3_decel
@@ -268,7 +270,7 @@ bind = $mainMod, O, exec, bilibili
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, A, exec, gnome-software 
 
-bind = $mainMod, D, exec, thunderbird
+bind = $mainMod, D, exec, Telegram
 bind = $mainMod, F, fullscreen, 1
 
 bind = $mainMod, G, exec, libreoffice
