--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -266,7 +266,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Y, exec, code
 bind = $mainMod, U, exec, lutris
 bind = $mainMod, I, exec, steam
-bind = $mainMod, O, exec, bilibili
+bind = $mainMod, O, exec, bilibili --ozone-platform-hint=auto --enable-wayland-ime
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, A, exec, gnome-software 
 
